fix mvbtns and its help
- was always showing on start
- was on-top, covering the help etc
- had out-dated help

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ html { font-size: calc(16px + 0.5vw) }
   padding-top: 0.5rem;
   position: sticky; top: 0;
   background-color: var(--background-translucent);
+  z-index: 10;
 }
 
 #aaya_bgn, #aaya_end { font-family: KacstOne; }
@@ -246,6 +247,16 @@ summary::marker { color: #c00; }
   bottom: 1rem;
   right: calc(50vw - 0.5 * (5*0.33 + 0.67 + 5*0.1) * var(--btn-base-width));
   margin: 0 calc(0.1 * var(--btn-base-width));
+  transition: opacity 0.1s ease-in-out;
+}
+
+#mvbtns_disablehack {
+  position: fixed;
+  bottom: 1rem;
+  width: 100%;
+  height: 2em;
+  z-index: 1;
+  background-color: transparent;
 }
 
 /* #nextword, */
@@ -271,7 +282,7 @@ summary::marker { color: #c00; }
   transition: opacity 0.5s ease-in-out;
   opacity: 0;
   visibility: hidden;
-  z-index: 3;  /* higher than the help toggle label */
+  z-index: 30;  /* higher than the help toggle label */
 }
 
 /* help */
@@ -345,7 +356,7 @@ a:active { color: red; text-shadow: 1pt 1pt 2pt lightblue; }
   /* clip-path: path('M0,0 h250 a 50 50 0 0 1 50 50 Z'); /*a 250 250 0 0 1 100 100 v70 h-750 Z');*/
   /* clip-path: path('h 661.90528 c 3.02658,-52.87421 46.75217,-94.21966 99.71289,-94.28516 Z'); */
   /* mask-image: circle */
-  z-index: 2;
+  z-index: 20;
   position: relative;
   /* margin-top: -1rem; */
 }
